--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
         </div>
 
         <div class="bottom-container">
-            <div class="length">
-                <p>Length (Meter/Feet)</p>
-                <p id="output-1"></p>
+            <div class="sub-container">
+                <p class="label" >Length (Meter/Feet)</p>
+                <p id="output-1">12</p>
 
             </div>
 
-            <div class="length">
-                <p>Volume (Liters/Gallons)</p>
-                <p id="output-2"></p>
+            <div class="sub-container">
+                <p class="label" >Volume (Liters/Gallons)</p>
+                <p id="output-2">12</p>
             </div>
 
-            <div class="length">
-                <p>Mass (Kilogram/Pound)</p>
-                <p id="output-3"></p>
+            <div class="sub-container">
+                <p class="label">Mass (Kilogram/Pound)</p>
+                <p id="output-3">12</p>
             </div>
+            
+
 
         </div>
 
